Code restructuring + bugs

--- a/cutview.kv
+++ b/cutview.kv
@@ -35,7 +35,7 @@
                         size: self.size
                         pos: self.pos
 
-        FileGrab:
+        BoxLayout:
             size_hint: (1, 0.1)
             spacing: dp(10)
             padding: [dp(10), dp(10), dp(10), dp(10)]
