Comments and test file

--- a/cutview.kv
+++ b/cutview.kv
@@ -1,4 +1,4 @@
-# This document outlines and creates major UI features for GUI
+# This document outlines and creates static UI features for GUI
 
 <RoundedButton@Button>:
     background_color: 0,0,0,0  # the last zero is the critical on, make invisible
