--- a/cutview.kv
+++ b/cutview.kv
@@ -355,4 +355,4 @@
             text: "Quit"
             size_hint: (1, 0.1)
             font_size: self.size[0] / 10
-            on_press: root.quitbtn()
+            on_press: root.quit_btn()
