--- a/cutview.kv
+++ b/cutview.kv
@@ -281,8 +281,8 @@
                 font_size: self.size[1] / 2.5
                 on_press: Factory.NetCDFDropDown().open(self)
 
-            Label:
-                text: ""
+            BoxLayout:
+                id: colorbar
                 size_hint: (0.7, 1)
 
         RelativeLayout:
