Package for PyPI

--- a/cutview/src/cutview/cutview.kv
+++ b/cutview/src/cutview/cutview.kv
@@ -3,8 +3,8 @@
 # Refer to kivy docs for syntax.
 
 #:import Factory kivy.factory.Factory
-#:import ViewDropDown dropdowns
-#:import NetCDFDropDown dropdowns
+#:import ViewDropDown cutview.dropdowns.ViewDropDown
+#:import NetCDFDropDown cutview.dropdowns.NetCDFDropDown
 
 
 <BackgroundLabel@Label>
