Rename to NcCut

--- a/src/nccut/nccut.kv
+++ b/src/nccut/nccut.kv
@@ -3,8 +3,8 @@
 # Refer to kivy docs for syntax.
 
 #:import Factory kivy.factory.Factory
-#:import ViewDropDown cutview.dropdowns.ViewDropDown
-#:import NetCDFDropDown cutview.dropdowns.NetCDFDropDown
+#:import ViewDropDown nccut.dropdowns.ViewDropDown
+#:import NetCDFDropDown nccut.dropdowns.NetCDFDropDown
 
 
 <BackgroundLabel@Label>
