Added new tool that allows multiple transects to be chained together

--- a/src/nccut/nccut.kv
+++ b/src/nccut/nccut.kv
@@ -352,6 +352,12 @@
             on_press: root.transect_btn("transect_marker")
 
         RoundedButton:
+            text: "Transect Chain"
+            size_hint: (1, 0.1)
+            font_size: self.size[0] / 12
+            on_press: root.transect_btn("transect_chain")
+
+        RoundedButton:
             text: "Quit"
             size_hint: (1, 0.1)
             font_size: self.size[0] / 10
