Properly license files

--- a/src/nccut/nccut.kv
+++ b/src/nccut/nccut.kv
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 University of Washington
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
 # This document outlines and creates static UI features for GUI. This document uses
 # Kivy's kv language to define UI features in a more readable fashion.
 # Refer to kivy docs for syntax.
